gcc/testsuite/rust/rustc/ui/issues/issue-73541-3.rs
fn main() {
    'aaaaab: loop {
        || {
            loop { continue 'aaaaaa }
// { dg-error ".E0426." "" { target *-*-* } .-1 }
        };

    }
}

